changed all links to be buttons moved button colors to layout css fixed spacing

--- a/ClientApp/src/components/CompanyPortal/CompanyProfile.css
+++ b/ClientApp/src/components/CompanyPortal/CompanyProfile.css
@@ -1,32 +1,23 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding-top: 20px;
-  }
-  
-  .col1,
-  .col2 {
-    margin-bottom: 20px;
-  }
-  
-  .saveButton {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    transition: background-color 0.3s ease;
-  }
-  
-  .saveButton.green {
-    background-color: #21cea1;
-  }
-  
-  .saveButton.orange {
-    background-color: #FF7D00;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 20px;
+}
+
+.col1,
+.col2 {
+  margin-bottom: 20px;
+}
+
+.saveButton {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  transition: background-color 0.3s ease;
+}
